--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,20 @@
 :root {
-  --color-white: white;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --color-blue: #00beef;
+  --color-blue2: #00a3cc;
+  --color-black: #303030;
+  --color-black2: #4a4a4a;
+  --color-white: #F5F5F5;
+}
+
+*, *::after, *::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+  scroll-behavior: smooth;
 }
