--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -14,13 +14,16 @@
     padding: 20px;
     font-size: 2rem;
     border-radius: 10px;
+    color: var(--color-white);
+    font-weight: bold;
 }
 
 .nav-bar li:hover {
     background-color: var(--color-blue2);
+    color: var(--color-black);
 }
 
 .nav-bar a {   
     text-decoration: none;
-    color: var(--color-white);
+    color: inherit;
 }
