added css to Skill section

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -5,9 +5,10 @@
 
 .nav-bar ul {
     display: flex;
-    justify-content: center;
+    justify-content: end;
     gap: 10px;
     list-style: none;
+    padding-right: 30px;
 }
 
 .nav-bar li {
