--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -18,6 +18,7 @@
     border-radius: 10px;
     color: var(--color-white);
     font-weight: bold;
+    transition: background-color 0.3s ease;
 }
 
 .nav-bar li:hover {
