--- a/src/styles/WelcomeSection.css
+++ b/src/styles/WelcomeSection.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-bottom: 2px solid;
 }
 
 .welcome-section h1 {
@@ -13,6 +14,6 @@
 }
 
 .welcome-section p {
-    color: red;
+    color: var(--color-orange);
     font-size: 3rem;
 }
