--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,9 @@
   --color-black: #303030;
   --color-black2: #4a4a4a;
   --color-white: #F5F5F5;
+  --color-red: red;
+  --color-orange: hsl(25, 75%, 47%);
+  --color-orange2: hsl(25, 75%, 40%);
 }
 
 *, *::after, *::before {
