update 0.2.0 added all skills to skills section + css

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,7 @@
 footer {
     width: 100%;
-    background-color: var(--color-blue2);
+    background-color: var(--color-orange);
+    color: var(--color-white);
     font-size: medium;
     text-align: center;
     padding: 10px;
