--- a/src/styles/WelcomeSection.css
+++ b/src/styles/WelcomeSection.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-bottom: 2px solid;
+    user-select: none;
 }
 
 .welcome-section h1 {
