--- a/src/styles/WelcomeSection.css
+++ b/src/styles/WelcomeSection.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     user-select: none;
+    background-color: var(--color-black);
 }
 
 .welcome-section h1 {
