--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -10,6 +10,7 @@
     gap: 10px;
     list-style: none;
     padding-right: 30px;
+    flex-wrap: wrap;
 }
 
 .nav-bar li {
@@ -23,10 +24,10 @@
 
 .nav-bar li:hover {
     background-color: var(--color-orange2);
-    color: var(--color-black);
 }
 
 .nav-bar a {   
     text-decoration: none;
     color: inherit;
+    padding: 20px 0;
 }
