added more css to project section + small fixes

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,7 @@
   --color-black: #303030;
   --color-black2: #4a4a4a;
   --color-white: #F5F5F5;
-  --color-red: red;
+  --color-silver: silver;
   --color-orange: hsl(25, 75%, 47%);
   --color-orange2: hsl(25, 75%, 40%);
 }
