--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -27,6 +27,8 @@
 .project-pic img {
     max-width: 400px;
     height: auto;
+    border: 4px solid var(--color-orange);
+    border-radius: 20px;
 }
 
 @media (max-width: 61.25em) {
