--- a/src/styles/ProjectsSection.css
+++ b/src/styles/ProjectsSection.css
@@ -7,3 +7,33 @@
     display: flex;
     flex-direction: column;
 }
+
+.projects-header {
+    margin: 0 auto;
+    margin-bottom: 10px;
+    padding: 4px;
+    font-size: 2.4rem;
+    color: var(--color-white);
+    border-bottom: 2px solid var(--color-orange);
+}
+
+.projects-footer {
+    margin: 0 auto;
+    margin-top: 20px;
+    padding: 4px;
+    font-size: 2.4rem;
+    color: var(--color-white);
+    border-top: 2px solid var(--color-orange);
+}
+
+.btn {
+    display: inline-block;
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--color-orange);
+    transition: transform 0.3s ease-out;
+}
+  
+.btn:hover {
+    transform: translateY(8px);
+}
