--- a/src/styles/ProjectsSection.css
+++ b/src/styles/ProjectsSection.css
@@ -1,6 +1,6 @@
 .projects-section {
     background-color: var(--color-black);
-    padding: 50px;
+    padding: 70px 40px;
 }
 
 .projects-box {
@@ -10,6 +10,7 @@
 
 .projects-header {
     margin: 0 auto;
+    text-shadow: 2px 2px 1px black;
     margin-bottom: 10px;
     padding: 4px;
     font-size: 2.4rem;
