--- a/src/styles/WorkExp.css
+++ b/src/styles/WorkExp.css
@@ -1,8 +1,17 @@
 .jobs-box {
-    padding: 50px;
+    padding: 70px 50px;
     display: flex;
     flex-direction: column;
     gap: 20px;
+}
+
+.jobs-box h2 {
+    margin: 0 auto;
+    margin-bottom: 30px;
+    text-shadow: 2px 2px 1px var(--color-silver);
+    padding: 4px;
+    font-size: 2.4rem;
+    border-bottom: 2px solid var(--color-orange);
 }
 
 .job {
