--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,11 +1,13 @@
 .nav-bar {
+    display: flex;
+    justify-content: end;
     position: fixed;
     width: 100%;
     background-color: var(--color-orange);
     z-index: 2;
 }
 
-.nav-bar ul {
+.big-nav ul {
     display: flex;
     justify-content: end;
     gap: 10px;
@@ -14,7 +16,7 @@
     flex-wrap: wrap;
 }
 
-.nav-bar li {
+.big-nav li, .small-nav li {
     padding: 20px;
     font-size: 2rem;
     border-radius: 10px;
@@ -23,12 +25,85 @@
     transition: background-color 0.3s ease;
 }
 
-.nav-bar li:hover {
+.big-nav li:hover, .small-nav li:hover {
     background-color: var(--color-orange2);
 }
 
-.nav-bar a {   
+.big-nav a, .small-nav a{   
     text-decoration: none;
     color: inherit;
     padding: 20px 0;
+}
+
+.small-nav {
+    display: none;
+    width: 100%;
+    align-items: flex-end;
+}
+
+.small-nav ul {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    max-width: 450px;
+    padding: 150px 0;
+    top: 0;
+    right: -450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    list-style: none;
+    transition: 0.3s ease;
+}
+
+.small-nav ul.hidden {
+    right: 0;
+}
+
+.small-nav-btn {
+    display: none;
+    position: absolute;
+    right: 0;
+    font-size: 2.5rem;
+    margin: 20px;
+    padding: 30px;
+    border: none;
+    border-radius: 50%;
+    background-color: var(--color-orange);
+    color: var(--color-white);
+    cursor: pointer;
+    z-index: 2;
+}
+
+
+@media (max-width: 40em) {
+    .nav-bar {
+        background-color: transparent;
+    }
+
+    .big-nav  {
+        display: none; 
+    }
+
+    .small-nav {
+        display: block;
+    }
+
+    .small-nav ul {
+        flex-direction: column;
+        background-color: var(--color-white);
+        border-radius: 20px;
+    }
+
+    .small-nav li {
+        text-align: center;
+        color: var(--color-black);
+        font-size: 2.6rem;
+    }
+
+    .small-nav-btn {
+        display: block;
+    }
 }
