--- a/src/styles/ProjectsSection.css
+++ b/src/styles/ProjectsSection.css
@@ -23,6 +23,7 @@
     margin-top: 20px;
     padding: 4px;
     font-size: 2.4rem;
+    text-align: center;
     color: var(--color-white);
     border-top: 2px solid var(--color-orange);
 }
