--- a/src/styles/WelcomeSection.css
+++ b/src/styles/WelcomeSection.css
@@ -7,6 +7,7 @@
     align-items: center;
     user-select: none;
     background-color: var(--color-black);
+    text-align: center;
 }
 
 .welcome-section h1 {
