--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -38,13 +38,14 @@
 }
 
 .project-pic img {
-    max-width: 400px;
+    max-width: 500px;
+    width: 100%;
     height: auto;
     border: 4px solid var(--color-orange);
     border-radius: 20px;
 }
 
-@media (max-width: 61.25em) {
+@media (max-width: 75em) {
     .project {
         flex-direction: column;
     }
