--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -55,6 +55,7 @@
     align-items: center;
     text-align: center;
     list-style: none;
+    user-select: none;
     transition: 0.3s ease;
 }
 
@@ -75,6 +76,7 @@
     background-color: var(--color-orange);
     color: var(--color-white);
     cursor: pointer;
+    user-select: none;
     z-index: 2;
 }
 
