update 1.3.5 added option for resume download

--- a/src/styles/ProjectsSection.css
+++ b/src/styles/ProjectsSection.css
@@ -34,6 +34,7 @@
     font-weight: bold;
     color: var(--color-orange);
     transition: transform 0.3s ease-out;
+    text-wrap: nowrap;
 }
   
 .btn:hover {
