--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -67,10 +67,11 @@
     display: none;
     position: absolute;
     width: 80px;
+    height: 80px;
     right: 0;
     font-size: 2.5rem;
     margin: 20px;
-    padding: 30px;
+    padding: 20px;
     border: none;
     border-radius: 50%;
     background-color: var(--color-orange);
